# 260205_assessment

./: .gitignore  README.md  cik_list.json  pyproject.toml  requirements.txt
src/: config.py  main.py
src/api/: client.py
src/app/: main.py
src/app/api/: client.py
src/app/process/: render.py
src/process/: render.py
